--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/sergio2448/challenge10#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "moment": "^2.29.4",
     "socket.io": "^4.5.2"
   }
